--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="estilos/estilo.css" rel="stylesheet">
     <script src="scripts/jquery-3.6.0.js"></script>
     <script src="scripts/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
     <script src="scripts/script.js"></script>
 </head>
 <body>
@@ -16,12 +17,17 @@
         <img class="superior" src="imagenes/syscom.svg">
     </div>
     <div class="datos">
-        <b>URL Privada</b>
-        <input type="text" id="privada">
-        <img class="icono" src="imagenes/boton-derecha.png" onclick="convertir()">
-        <b class="url">URL Pública</b>
-        <input type="text" id="publica" disabled>
-        <button id="copiar" onclick="copiar()">Copiar</button>
+        <div class="priv">
+            <b>URL Privada</b>
+            <input type="text" id="privada">
+            <button id="generar" onclick="convertir(), copiar(), mensaje()">Generar</button>
+        </div>
+        <div class="pub">
+            <b class="url">URL Pública</b>
+            <input type="text" id="publica" disabled>
+            <button id="vaciar" onclick="vaciar()">Limpiar</button>
+        </div>
+        <p id="mensaje1"><div class="mensaje" style="background: #467a49e0; color: #fff">URL copiado en el portapapeles</div></p>
     </div>
 </body>
 </html>
